--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "script.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "run": "npx nodemon app.js"
+    "build": "npx nodemon app.js"
   },
   "keywords": [],
   "author": "",
